<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    android:orientation="vertical"
    tools:context="vtc.room.a101.taskmanager.fragmens.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_size">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:hint="@string/input_email"
            android:inputType="text"
            android:textColor="@color/colorText"
            android:textSize="@dimen/input_text_size" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_lay1"
        android:layout_marginTop="@dimen/margin_from_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/input_password"
                android:layout_width="@dimen/edit_text_resource"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:hint="@string/input_password"
                android:textColor="@color/colorText"
                android:textSize="@dimen/input_text_size" />

            <ImageButton
                android:id="@+id/is_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye"
                android:layout_marginTop="10dp"
                android:tint="@color/colorTint"
                android:backgroundTint="@color/colorBackgroundTint"
                />
        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_lay2"
        android:layout_marginStart="@dimen/center_size"
        android:backgroundTint="@color/colorBackgroundTint"
        android:contentDescription="@string/login_button"
        android:src="@drawable/ic_login"
        android:tint="@color/colorTint" />

    <ImageButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_lay2"
        android:layout_toEndOf="@+id/login_button"
        android:backgroundTint="@color/colorBackgroundTint"
        android:contentDescription="@string/login_button"
        android:src="@drawable/ic_register"
        android:tint="@color/colorTint" />

</RelativeLayout>
